# block_cypher

./: Cargo.toml  README.md
src/: contact.rs  data_container.rs  encryption_handler.rs  file_container.rs  file_encryption_handler.rs  main.rs  message_container.rs  program_data.rs  screens.rs  utils.rs
src/screens/: auth.rs  builders.rs  cipher.rs  contacts.rs  main_menu.rs  menu.rs  mod.rs
src/screens/auth/: change_password.rs  returning.rs  setup.rs
src/screens/builders/: change_password_menu.rs  contacts_menu_builder.rs  decrypt_file_menu_builder.rs  decrypt_menu.rs  decrypt_menu_builder.rs  edit_contact_menu.rs  encrypt_file_menu_builder.rs  encrypt_menu.rs  encrypt_menu_builder.rs  key_exchange_menu_builder.rs  main_menu.rs  main_menu_builder.rs  receive_key_exchange_menu.rs  returning_menu.rs  returning_menu_builder.rs  setup_menu.rs  start_key_exchange_menu.rs  start_key_exchange_menu_builder.rs
src/screens/cipher/: decrypt.rs  decrypt_file.rs  encrypt.rs  encrypt_file.rs
src/screens/contacts/: contacts.rs  contacts_menu.rs  edit_contact.rs  key_exchange.rs  receive_key_exchange.rs  recieve_key_exchange.rs  start_key_exchange.rs
