[package]
name = "block_cypher"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oqs = { version = "0.9.0", default-features = false, features = [
    "sigs",
    "kems",
] }
aes-gcm-siv = "0.11.1"
base64 = "0.21.2"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
sha3 = "0.10.8"
rand = "0.8.5"
directories = "5.0.1"
arboard = "3.2.0"
fltk = "1.4.8"
fltk-theme = "0.7.1"
hex = "0.4.3"
